# atc-dataplatform-tools

./: README.md  setup.cfg  setup.py  test_requirements.txt
.github/workflows/: post-integration.yml  pre-integration.yml  release.yml
docs/: README.md
docs/tools/: README.md
src/atc_tools/: __init__.py  requirements.py
src/atc_tools/az_databricks_token/: __init__.py  get_ad_access_token.py  get_impersonation_authorization_code.py  main.py  server.py
src/atc_tools/entry_points/: task_entry_point_helper.py
src/atc_tools/format/: CheckCamelCase.py  validate_camelcased_cols.py
src/atc_tools/helpers/: ExtractEncodedBody.py  __init__.py  get_difference_between_two_dfs.py
src/atc_tools/test_job/: RunDetails.py  dbcli.py  dbfs.py  fetch.py  main.py  submit.py  test_main.py
src/atc_tools/testing/: DataframeCreator.py  DataframeTestCase.py  TestHandle.py  __init__.py
src/atc_tools/time/: TimeSequence.py  __init__.py
src/spetlrtools/: __init__.py  manipulate_version.py
src/spetlrtools/az_databricks_token/: AuthLinkOpener.py  __init__.py  get_ad_access_token.py  get_impersonation_authorization_code.py  main.py
src/spetlrtools/entry_points/: __init__.py  task_entry_point_helper.py
src/spetlrtools/format/: validate_camelcased_cols.py
src/spetlrtools/helpers/: ExtractEncodedBody.py  get_difference_between_two_dfs.py  module_helper.py
src/spetlrtools/test_job/: RunDetails.py  fetch.py  main.py
src/spetlrtools/testing/: DataframeTestCase.py  __init__.py
src/spetlrtools/time/: __init__.py
tests/unit/: test_CheckCamel.py  test_Dummy.py  test_ValidateCamel.py  test_extractencodedbody.py  test_get_difference_between_two_dfs.py  test_manipulate_version.py  test_requiements.py  test_time.py
tests/unit/entry_points/test_task_entry_point_helper/: test_task_entry_point_helper.py
tests/unit/entry_points/test_task_entry_point_helper/dummy_module/: foo.py
tests/unit/entry_points/test_task_entry_point_helper/dummy_module/submodule/: bar.py
tests/unit/entry_points/test_task_entry_point_helper/other_dummy_module/: foo.py
tests/unit/helpers/module_helper/: test_module_helper.py
tests/unit/helpers/module_helper/dummy_module/: foo.py
utilities/: manipulate_version.py
