[metadata]
name = atc-dataplatform-tools
author = ATC.Net
version = file: src/VERSION.txt
author_email = atcnet.org@gmail.com
description = A common set of python libraries for DataBricks, supplement to atc-dataplatform
long_description = file: README.md
long_description_content_type = text/markdown
keywords = databricks, pyspark, atc-dataplatform
url = https://github.com/atc-net/atc-dataplatform-tools
license_files = LICENSE
project_urls =
    Documentation = https://github.com/atc-net/atc-dataplatform-tools
    Bug Reports = https://github.com/atc-net/atc-dataplatform-tools/issues
    Source Code = https://github.com/atc-net/atc-dataplatform-tools
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires =
    atc-dataplatform
    pyyaml==6.0
    importlib_metadata

[options.packages.find]
where=src

[options.extras_require]
dev =
    check-manifest

[options.package_data]
* = *.json, *.sql, *.yaml



[flake8]
exclude = .git,__pycache__,docs,build,dist,venv
# ignore = E203, E266, E501, W503, F403, F401
ignore = E501
max-line-length = 88
extend-ignore = E203
# max-complexity = 18
# select = B,C,E,F,W,T4,B9
