[metadata]
name = atc-dataplatform-tools
author = ATC.Net
version = file: src/VERSION.txt
author_email = atcnet.org@gmail.com
description = A common set of python libraries for DataBricks, supplement to atc-dataplatform
long_description = file: README.md
long_description_content_type = text/markdown
keywords = databricks, pyspark, atc-dataplatform
url = https://github.com/atc-net/atc-dataplatform-tools
license_files = LICENSE
project_urls =
    Documentation = https://github.com/atc-net/atc-dataplatform-tools
    Bug Reports = https://github.com/atc-net/atc-dataplatform-tools/issues
    Source Code = https://github.com/atc-net/atc-dataplatform-tools
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.8
install_requires =
    atc-dataplatform
    pyyaml==6.0
    importlib_metadata
    requests
    dateparser
    pytest

[options.packages.find]
where=src

[options.extras_require]
dev =
    check-manifest

[options.package_data]
* = *.json, *.sql, *.yaml


[options.entry_points]
console_scripts =
    atc_dp_freeze_req = atc_tools.requirements:main
    atc_az_databricks_token = atc_tools.az_databricks_token.main:main
    atc-test-job = atc_tools.test_job.main:main


[flake8]
exclude = .git,__pycache__,docs,build,dist,venv
# ignore = E203, E266, E501, W503, F403, F401
ignore = E501, W503
max-line-length = 88
extend-ignore = E203
# max-complexity = 18
# select = B,C,E,F,W,T4,B9
